# bridge-cart

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
airflow/dags/: customer_segmentation_dag.py
catalog/: create_tables.sql  fix_run_ts.sql  remove_last_5_batch_runs.sql  resintate_history.sql  tables.sql
catalog/demo/: gold_customers_segments.csv
catalog/reports/: pipeline_drift.sql
customer_segmentation/: __init__.py  config.py  data_generation.py  dataset.py  features.py  ingestion.py  plots.py  segmentation.py  transformation.py
customer_segmentation/modeling/: predict.py  train.py
docs/: 1_data_ingestion.md  2_data_transformation_silver.md  3_segmentation_and_scd2.md  4_reporting_visualization.md  mkdocs.yml
docs/docs/: index.md
reports/: Dockerfile  app.py  requirements.txt
