[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "customer_segmentation"
version = "0.0.1"
description = "3.12"
authors = [
  { name = "Bharath Raghupatruni" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["customer_segmentation"]
include = ["pyproject.toml", "customer_segmentation/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["customer_segmentation"]
force-sort-within-sections = true

